fix($presentation): fix image overflow

--- a/src/app/presentation/public/pages/settings/components/edit-profile-modal/edit-profile-modal.component.scss
+++ b/src/app/presentation/public/pages/settings/components/edit-profile-modal/edit-profile-modal.component.scss
@@ -23,6 +23,9 @@ $dropperWidthMobile: 150px;
 }
 
 .image {
+  width: $dropperWidth;
+  height: $dropperWidth;
+  overflow: hidden;
   & img {
     width: 100%;
     height: 100%;
